fix popover time text vertical align

--- a/src/main/java/org/dominokit/domino/ui/public/css/style.css
+++ b/src/main/java/org/dominokit/domino/ui/public/css/style.css
@@ -12612,7 +12612,7 @@ a.disabled {
     position: absolute;
     left: 50%;
     margin-left: -100px;
-    top: 10px;
+    margin-top: 10px;
 }
 
 .time-picker .am-pm-text {
